--- a/config.yml
+++ b/config.yml
@@ -63,7 +63,7 @@ params:
   profileMode:
     enabled: true # needs to be explicitly set
     title: Humail Khan
-    subtitle: "This is the website of **Humail Khan**"
+    subtitle: "Software Developer, Cloud Engineer"
     # imageUrl: "images/me.jpg"
     imageWidth: 120
     imageHeight: 120
@@ -77,13 +77,13 @@ params:
   # home-info mode
   homeInfoParams:
     Title: "Hi there \U0001F44B"
-    Content: Welcome to my blog
+    Content: Welcome to my website
 
   socialIcons:
     - name: linkedin
-      url: "https://www.linkedin.com/in/humailkhan/"
-    - name: github
-      url: "https://github.com/"
+      url: "https://www.linkedin.com/in/humailkhan829/"
+    - name: email
+      url: "mailto:humailkhan829@yahoo.com"
 
   cover:
     hidden: true # hide everywhere but not in structured data
